# pushie

./: .gitignore  LICENSE  README.md  auto-clicker.py  build.sh  main.py  push-to-talk.py  pushie.spec  pyproject.toml  register-app.sh
app/: __init__.py  engine.py  evdev_shortcuts.py  gui_editor.py  gui_home.py  main.py  storage.py  xdg_shortcuts.py
tests/: test_engine.py  test_gui_home.py  test_storage.py  test_xdg_shortcuts.py
