[project]
name = "pushie"
version = "0.1.0"
description = "Push-to-Talk and Macro builder using Qt & XDG Global Shortcuts Portal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.0.0",
    "PyYAML>=6.0.0",
    "dbus-python>=1.3.0",
    "PyGObject>=3.40.0",
    "evdev>=1.6.0",
]
